Update Farcaster embed meta tags with new URLs

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <!-- ========= Farcaster Embed (Hada rah kan 3ndk) ========= -->
     <meta name="fc:miniapp" content='{
       "version":"next",
-      "imageUrl":"https://<YOUR_VERCEL_APP_URL>/embed-image.png",
+      "imageUrl":"https://scrambled-word-game1.vercel.app/embed-image.png",
       "button":{
           "title":"Play Scrambled Word Quiz",
           "action":{
           "type":"launch_miniapp",
           "name":"Scrambled Word Quiz",
-          "url":"https://<YOUR_VERCEL_APP_URL>"
+          "url":"https://scrambled-word-game1.vercel.app/"
           }
       }
     }' />
