--- a/index.html
+++ b/index.html
@@ -470,9 +470,7 @@
         // ========= Hna kangolo l React ykhdm l-game dyalna =========
         const root = ReactDOM.createRoot(document.getElementById('root'));
         root.render(
-            <React.StrictMode>
-                <App /> {/* // Kan smito ScrambledWordQuiz */}
-            </React.StrictMode>
+            <App /> /* // Hani 7ydt <React.StrictMode> mn hna b l-sahh */
         );
     </script>
 
